--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,3 +1,10 @@
+FROM node:lts-alpine as build
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
 # production stage
 FROM nginx:stable-alpine as production
 COPY --from=build /app/build ../../..//usr/share/nginx/html
